--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -1,7 +1,8 @@
 .ProductContainer {
+  position: relative;
   background: #fff;
   margin: 20px;
-  width: 350px;
+  width: 45%;
   margin-top: 60px;
   color: #242428;
   box-shadow: 0 2px 6px #3d3d4f24;
@@ -68,7 +69,9 @@
 }
 
 .Discount {
-  margin-left: 12px;
+  position: absolute;
+  top: -10px;
+  right: -15px;
   color: #fff;
   background: #3bc865;
   border-radius: 400px;
