--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -4,7 +4,7 @@
   margin: 20px;
   width: 45%;
   margin-top: 60px;
-  color: #242428;
+  color: var(--text-color);
   box-shadow: 0 2px 6px #3d3d4f24;
   border-radius: 10px;
 }
@@ -30,13 +30,23 @@
   align-items: center;
 }
 
+.ProductInfoContainer {
+  display: flex;
+  align-items: center;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 16px;
+}
+
 .ProductTitleContainer {
-  margin-top: -40px;
+  margin-top: -35px;
 }
 
 .ProductTitle {
   text-transform: capitalize;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 .ProductTypeList {
@@ -73,7 +83,7 @@
   top: -10px;
   right: -15px;
   color: #fff;
-  background: #3bc865;
+  background: var(--success-color);
   border-radius: 400px;
   padding: 2px 10px;
 }
@@ -81,12 +91,7 @@
 .ProductBuyButton {
   display: block;
   margin-left: auto;
-  margin-top: 20px;
-  background: #3b3bc8;
-  color: #fff;
-  border: none;
   padding: 10px 12px;
   font-size: 1rem;
-  border-top-left-radius: 4px;
-  border-bottom-right-radius: 10px;
+  width: 40%;
 }
