--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -6,14 +6,19 @@
   box-shadow: 0 2px 6px #3d3d4f24;
   background: #fff;
   border-radius: 10px;
-  padding: 10px 12px;
+  padding: 22px 14px;
+}
+
+.CartTitle {
+  padding-left: 44px;
+  color: var(--text-color);
 }
 
 .CartListContainer {
   margin: 24px 0;
   height: 400px;
   padding: 10px 12px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .CartSummary {
@@ -47,10 +52,4 @@
   width: 80%;
   font-size: 1.2rem;
   cursor: pointer;
-}
-
-.CartButton:hover {
-  filter: brightness(1.3);
-  box-shadow: 0 2px 6px #3d3d4f42;
-  transition: 150ms ease-in-out;
 }
