--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,13 @@ button {
   background: var(--main-color);
   border-radius: 4px;
   color: #fff;
+  cursor: pointer;
+}
+
+button:hover {
+  filter: brightness(1.3);
+  box-shadow: 0 2px 6px #3d3d4f42;
+  transition: 150ms ease-in-out;
 }
 
 :root {
