--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,5 +1,29 @@
 .PaginationContainer {
-  display: flex;
-  width: 100%;
-  height: 60%;
+  width: 50%;
+  height: 100%;
+  margin: auto;
+}
+
+.PaginationButton {
+  width: 120px;
+  padding: 10px 12px;
+  margin: 0 12px;
+}
+
+.PaginationInput {
+  display: inline-block;
+  width: 60px;
+  padding: 10px 12px;
+  margin: 0 12px;
+  border-radius: 4px;
+  box-shadow: 0 2px 6px #3d3d4f24;
+}
+
+.PaginationButton:disabled {
+  background: #3d3d4f;
+}
+.PaginationButton:hover:disabled {
+  filter: none;
+  box-shadow: none;
+  cursor: not-allowed;
 }
