--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -2,6 +2,7 @@
   width: 50%;
   height: 100%;
   margin: auto;
+  margin-top: 12px;
 }
 
 .PaginationButton {
@@ -22,8 +23,30 @@
 .PaginationButton:disabled {
   background: #3d3d4f;
 }
+
 .PaginationButton:hover:disabled {
   filter: none;
   box-shadow: none;
   cursor: not-allowed;
+}
+
+@media screen and (max-width: 768px) {
+  .PaginationContainer {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .PaginationContainer {
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+  }
+
+  .PaginationInput {
+    margin: 12px 0;
+    width: 100px;
+    text-align: center;
+  }
 }
