--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -2,7 +2,8 @@
   position: relative;
   background: #fff;
   margin: 20px;
-  width: 45%;
+  width: 25%;
+  min-width: 215px;
   margin-top: 60px;
   color: var(--text-color);
   box-shadow: 0 2px 6px #3d3d4f24;
@@ -10,7 +11,6 @@
 }
 
 .ProductSpriteContainer {
-  height: 110px;
   width: 110px;
   margin-right: 12px;
 }
@@ -20,28 +20,19 @@
   height: 100%;
   width: 100%;
   margin-top: -40px;
-}
-
-.ProductDisplay {
   margin-left: 12px;
   margin-bottom: -20px;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
 }
 
 .ProductInfoContainer {
-  display: flex;
-  align-items: center;
-  flex-flow: row wrap;
-  justify-content: space-between;
   width: 90%;
   margin: auto;
   margin-bottom: 16px;
 }
 
 .ProductTitleContainer {
-  margin-top: -35px;
+  margin: 8px 26px;
+  margin-top: 22px;
 }
 
 .ProductTitle {
@@ -73,9 +64,11 @@
 }
 
 .ProductPrice {
+  display: inline-block;
   font-weight: bold;
-  margin-left: 32px;
   font-size: 1.5rem;
+  margin: 12px 0;
+  margin-left: 15px;
 }
 
 .Discount {
@@ -90,8 +83,21 @@
 
 .ProductBuyButton {
   display: block;
-  margin-left: auto;
+  margin-left: 15px;
   padding: 10px 12px;
   font-size: 1rem;
-  width: 40%;
+  width: 80%;
+}
+
+@media screen and (max-width: 768px) {
+  .ProductContainer {
+    width: 40%;
+    min-width: 200px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .ProductContainer {
+    width: 75%;
+  }
 }
