--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -1,9 +1,17 @@
 .ProductListContainer {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-between;
   margin: 20px;
-  width: 60%;
+  width: 65%;
   margin-top: 30px;
   color: #242428;
   border-radius: 10px;
+}
+
+@media screen and (max-width: 500px) {
+  .ProductListContainer {
+    justify-content: center;
+    width: 90%;
+  }
 }
