--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -34,3 +34,20 @@
   background: var(--main-color);
   cursor: pointer;
 }
+
+@media screen and (max-width: 500px) {
+  .SearchContainer {
+    justify-content: center;
+    width: 90%;
+  }
+
+  .SearchInput {
+    width: 90%;
+  }
+
+  .SearchButton {
+    margin-top: 12px;
+    width: 50%;
+    padding: 12px 0;
+  }
+}
