--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -53,6 +53,26 @@
   cursor: pointer;
 }
 
+.EmptyCartContainer {
+  margin: 24px 0;
+  height: 400px;
+  padding: 10px 12px;
+  padding-top: 4rem;
+  text-align: center;
+  color: var(--text-color);
+}
+
+.EmptyCartIcon {
+  width: 70px;
+  height: 70px;
+}
+
+.EmptyCartTitle {
+  display: block;
+  margin: 12px 48px;
+  font-size: 1.2rem;
+}
+
 @media screen and (max-width: 768px) {
   .CartContainer {
     margin-right: 24px;
@@ -71,6 +91,10 @@
   }
 }
 
+.HeaderContainer {
+  display: none;
+}
+
 @media screen and (max-width: 1440px) {
   .CartContainer {
     margin-right: 24px;
@@ -79,8 +103,41 @@
 
 @media screen and (max-width: 500px) {
   .CartContainer {
-    width: 90%;
-    margin: auto;
-    margin-top: 60px;
+    display: none;
+    width: 100%;
+    margin: auto 0;
+    position: fixed;
+    padding: 100px 6px;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    overflow-y: scroll;
+  }
+
+  .Show {
+    display: block;
+  }
+
+  .CartListContainer {
+    height: 55vh;
+    margin-top: 12px;
+  }
+
+  .HeaderContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 70px;
+    background: #fff;
+    box-shadow: 0 2px 6px #3d3d4f24;
+  }
+
+  .HeaderButton {
+    padding: 10px 16px;
+    font-size: 1rem;
   }
 }
