--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -6,7 +6,7 @@
 }
 
 .CartItemInfoContainer {
-  width: 80%;
+  width: 40%;
   margin-left: 12px;
 }
 
@@ -42,6 +42,10 @@
     width: 40%;
     margin-top: 6px;
     margin-left: 12px;
+  }
+  
+  .CartItemInfoContainer {
+    width: 80%;
   }
 }
 
